big update of waybar and hyprland

--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -2,18 +2,21 @@
 # |                        Autostart                         |
 # +----------------------------------------------------------+
 
-# setbg			- set desktop wallpaper
-# cb        - clipboard manager
-# dunst     - notification-daemon
-# batsignal - battery notifier
-# waybar - bar
-# nm-applet - system tray network manager
+# cb          - clipboard manager
+# dunst       - notification daemon
+# hypridle    - hyprland's idle daemon.
+# batsignal   - battery notifier
+# waybar      - bar
+# nm-applet   - system tray network manager
 # xdg-desktop-portal-hyprland - ???
+# setbg			  - set desktop wallpaper
 
-exec = setbg
 exec-once = cb
 exec-once = dunst
+exec-once = hypridle
 exec-once = batsignal
 exec-once = waybar
 exec-once = nm-applet --indicator
 exec-once = xdg-desktop-portal-hyprland
+
+exec = setbg
