--- a/.config/hypr/conf/variables.conf
+++ b/.config/hypr/conf/variables.conf
@@ -5,9 +5,9 @@
 
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
+
     border_size = 1
-    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.active_border=rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
 
@@ -15,18 +15,11 @@ general {
 }
 
 decoration {
-    rounding = 0
-    
     blur { 
         enabled = false
-        size = 7
-        passes = 3
     }
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    drop_shadow = false
 }
 
 input {
@@ -38,41 +31,22 @@ input {
     repeat_delay = 250
     repeat_rate = 40
 
-    follow_mouse = 1
-
     touchpad {
-        natural_scroll = yes
-        disable_while_typing = true
-        # clickfinger_behavior = true
+        natural_scroll = true
         scroll_factor = 0.5
     }
-
-    # sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
-
-# gestures {
-#     workspace_swipe = off
-# }
 
 gestures {
     workspace_swipe = true
-    workspace_swipe_distance = 700
-    workspace_swipe_fingers = 3
-    workspace_swipe_cancel_ratio = 0.2
-    workspace_swipe_min_speed_to_force = 5
-    workspace_swipe_direction_lock = true
-    workspace_swipe_direction_lock_threshold = 10
-    workspace_swipe_create_new = true
 }
 
 misc {
-    vrr = 1
     enable_swallow = true
-    swallow_regex = (foot|kitty|allacritty|Alacritty)
+    swallow_regex = (foot|Alacritty)
     
     disable_hyprland_logo = true
-    force_default_wallpaper = 0
-    # new_window_takes_over_fullscreen = 2
+    force_default_wallpaper = 1
     allow_session_lock_restore = true
 
     initial_workspace_tracking = false
@@ -84,4 +58,5 @@ binds {
 
 cursor {
     inactive_timeout = 2
+    no_hardware_cursors = true
 }
