--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,8 +24,11 @@ bind S choose-session    # Simpler window to show only sessions
 # Set vim key for copy mode
 setw -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+# bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl-copy'
 
 set -g set-clipboard off
 
