--- a/.config/hypr/conf/binds.conf
+++ b/.config/hypr/conf/binds.conf
@@ -35,17 +35,23 @@ binde = ,XF86AudioLowerVolume, exec, audio volume-down
 binde = ,XF86MonBrightnessUp,   exec, brightness up
 binde = ,XF86MonBrightnessDown, exec, brightness down
 
-# bind = $mainMod, L, exec, swaylock # Lock the screen
-# bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
-# bind = $mainMod, E, exec, thunar # Show the graphical file browser
-# bind = $mainMod, SPACE, exec, wofi # Show the graphicall app launcher
-# bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
-
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+# Swaps the active window with another window
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
+
+# Resizing the active window
+bind = $mainMod SHIFT, right, resizeactive, 100 0
+bind = $mainMod SHIFT, left, resizeactive, -100 0
+bind = $mainMod SHIFT, down, resizeactive, 0 100
+bind = $mainMod SHIFT, up, resizeactive, 0 -100
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -78,4 +84,3 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
