--- a/.config/hypr/conf/environments.conf
+++ b/.config/hypr/conf/environments.conf
@@ -17,11 +17,18 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 # GTK
 env = GDK_SCALE,1
 
+# Set the cursor size for xcursor
+# env = XCURSOR_SIZE,24
+
 # Mozilla
 env = MOZ_ENABLE_WAYLAND,1
 
-# Set the cursor size for xcursor
-env = XCURSOR_SIZE,24
-
 # Disable appimage launcher by default
 env = APPIMAGELAUNCHER_DISABLE,1
+
+# NVIDIA https://wiki.hyprland.org/Nvidia/
+env = LIBVA_DRIVER_NAME,nvidia
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = __GL_VRR_ALLOWED,0
+# env = WLR_DRM_NO_ATOMIC,1
