--- a/.config/hypr/conf/layouts.conf
+++ b/.config/hypr/conf/layouts.conf
@@ -2,14 +2,14 @@
 # |                         Layouts                          |
 # +----------------------------------------------------------+
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout
+# See https://wiki.hyprland.org/Configuring/Master-Layout
+
 dwindle {
-    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # you probably want this
-    # layout = master
+    pseudotile = true
+    preserve_split = true
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout
 master {
-    orientation = right
+    new_status = master
 }
 
