--- a/.config/hypr/conf/windowrules.conf
+++ b/.config/hypr/conf/windowrules.conf
@@ -13,5 +13,23 @@
 # windowrulev2 = opacity 0.8 0.8,class:^(chromium)$
 # windowrulev2 = opacity 0.8 0.8,class:^(Code)$
 
+windowrulev2 = workspace 1, class:^(firefox)$
+windowrulev2 = workspace 1, class:^(Chromium)$
+windowrulev2 = workspace 4, class:^(discord)$
+windowrulev2 = workspace 4, class:^(org.telegram.desktop)$
+windowrulev2 = workspace 5, class:^([Ss]team)$
+
+windowrulev2 = float, title:^(About Mozilla Firefox)$
+windowrulev2 = float, class:^(firefox)$,title:^(Picture-in-Picture)$
+windowrulev2 = float, class:^(firefox)$,title:^(Library)$
+windowrulev2 = float, class:^(nwg-look)$
+windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float, class:^(nm-applet)$
+windowrulev2 = float, class:^(blueberry.py)$
+windowrulev2 = float, class:^(nm-connection-editor)$
+windowrulev2 = float, class:^(system-config-printer)$
+windowrulev2 = float, class:^(org.telegram.desktop)$
+windowrulev2 = float, class:^(org.gnome.SimpleScan)$
+
 # Disable borders if only one window
 windowrulev2 = noborder, onworkspace:w[t1]
