--- a/.config/hypr/conf/binds.conf
+++ b/.config/hypr/conf/binds.conf
@@ -5,7 +5,7 @@
 
 $mainMod = SUPER
 
-bind = $mainMod, RETURN, exec, foot # Open Alactritty
+bind = $mainMod, RETURN, exec, $TERMINAL # Open Alactritty
 bind = $mainMod, q, killactive           # Close current window
 bind = $mainMod, M, exit          # Exit Hyprland
 
