--- a/.config/hypr/conf/windowrules.conf
+++ b/.config/hypr/conf/windowrules.conf
@@ -3,16 +3,6 @@
 # +----------------------------------------------------------+
 # See https://wiki.hyprland.org/Configuring/Window-Rules
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# rules below would make the specific app transparent
-# windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
-# windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
-# windowrulev2 = opacity 0.8 0.8,class:^(chromium)$
-# windowrulev2 = opacity 0.8 0.8,class:^(Code)$
-
 windowrulev2 = workspace 1, class:^(firefox)$
 windowrulev2 = workspace 1, class:^(Chromium)$
 windowrulev2 = workspace 4, class:^(discord)$
@@ -30,6 +20,10 @@ windowrulev2 = float, class:^(nm-connection-editor)$
 windowrulev2 = float, class:^(system-config-printer)$
 windowrulev2 = float, class:^(org.telegram.desktop)$
 windowrulev2 = float, class:^(org.gnome.SimpleScan)$
+windowrulev2 = float, class:^(qalculate-gtk)$
+windowrule   = float, class:.*.exe
+windowrule   = float, class:steam_app_.*
+windowrule   = float, class:steam_proton
 
 # Disable borders if only one window
 windowrulev2 = noborder, onworkspace:w[t1]
