--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -8,7 +8,7 @@
 # batsignal   - battery notifier
 # waybar      - bar
 # nm-applet   - system tray network manager
-# xdg-desktop-portal-hyprland - ???
+# xdg-desktop-portal-hyprland - Setup XDG (for screen sharing)
 # setbg			  - set desktop wallpaper
 
 exec-once = cb
@@ -18,5 +18,4 @@ exec-once = batsignal
 exec-once = waybar
 exec-once = nm-applet --indicator
 exec-once = xdg-desktop-portal-hyprland
-
-exec = setbg
+exec-once = setbg
