--- a/.config/hypr/conf/variables.conf
+++ b/.config/hypr/conf/variables.conf
@@ -19,7 +19,10 @@ decoration {
         enabled = false
     }
 
-    drop_shadow = false
+    rounding = 10
+    active_opacity = 1.0
+    inactive_opacity = 0.8
+    fullscreen_opacity = 1.0
 }
 
 input {
@@ -33,6 +36,8 @@ input {
 
     touchpad {
         natural_scroll = true
+        disable_while_typing = true
+        clickfinger_behavior = true
         scroll_factor = 0.5
     }
 }
