--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -7,26 +7,25 @@
 # 
 # Full documentation: https://wiki.hyprland.org/Hypr-Ecosystem/hypridle/
 
+$suspend_cmd = pidof steam || systemctl suspend || loginctl suspend
+
 general {
-    lock_cmd = pidof waylock || waylock
     before_sleep_cmd = loginctl lock-session
+    after_sleep_cmd = hyprctl dispatch dpms on
 }
 
 listener {
-    # 5 min
     timeout = 300
     on-timeout = loginctl lock-session
 }
 
 listener {
-    # 6 min
     timeout = 360
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
 }
 
 listener {
-    # 10 min
     timeout = 600
-    on-timeout = systemctl suspend
+    on-timeout = $suspend_cmd
 }
