--- a/.config/hypr/conf/environments.conf
+++ b/.config/hypr/conf/environments.conf
@@ -14,12 +14,6 @@ env = QT_QPA_PLATFORMTHEME, qt5ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
-# GTK
-env = GDK_SCALE,1
-
-# Set the cursor size for xcursor
-# env = XCURSOR_SIZE,24
-
 # Mozilla
 env = MOZ_ENABLE_WAYLAND,1
 
@@ -32,3 +26,11 @@ env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = __GL_VRR_ALLOWED,0
 # env = WLR_DRM_NO_ATOMIC,1
+
+# GTK
+env = GDK_SCALE,1
+
+# Theme https://wiki.hyprland.org/Configuring/Environment-variables/#theming-related-variables
+# Set the cursor size for xcursor
+env = XCURSOR_THEME,Bibata-Modern-Classic
+env = XCURSOR_SIZE,24
