--- a/.config/hypr/conf/variables.conf
+++ b/.config/hypr/conf/variables.conf
@@ -46,6 +46,10 @@ gestures {
     workspace_swipe = true
 }
 
+ecosystem {
+    no_update_news = true
+}
+
 misc {
     enable_swallow = true
     swallow_regex = (foot|Alacritty)
