--- a/.config/hypr/conf/binds.conf
+++ b/.config/hypr/conf/binds.conf
@@ -11,7 +11,7 @@ bind = $mainMod, M, exit          # Exit Hyprland
 
 # Toggle back and forth between two recent workspaces
 bind = $mainMod, TAB, workspace, previous
-bind = $mainMod, b, exec, pkill -SIGUSR1 waybar
+bind = $mainMod, b, exec, killall -SIGUSR1 waybar
 
 bind = $mainMod, o, togglefloating       # Allow a window to float
 bind = $mainMod, f, fullscreen           # Open the window in fullscreen
@@ -34,6 +34,9 @@ binde = ,XF86AudioLowerVolume, exec, audio volume-down
 # Brightness Control
 binde = ,XF86MonBrightnessUp,   exec, brightness up
 binde = ,XF86MonBrightnessDown, exec, brightness down
+
+# Screen recording
+# bind = ,XF86Search, exec, screenshot-area
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
