--- a/.config/hypr/conf/windowrules.conf
+++ b/.config/hypr/conf/windowrules.conf
@@ -13,7 +13,7 @@ windowrulev2 = float, title:^(About Mozilla Firefox)$
 windowrulev2 = float, class:^(firefox)$,title:^(Picture-in-Picture)$
 windowrulev2 = float, class:^(firefox)$,title:^(Library)$
 windowrulev2 = float, class:^(nwg-look)$
-windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float, class:(.*org.pulseaudio.pavucontrol.*)
 windowrulev2 = float, class:^(nm-applet)$
 windowrulev2 = float, class:^(blueberry.py)$
 windowrulev2 = float, class:^(nm-connection-editor)$
@@ -27,3 +27,13 @@ windowrule   = float, class:steam_proton
 
 # Disable borders if only one window
 windowrulev2 = noborder, onworkspace:w[t1]
+
+# Jetbrains specific settings
+windowrulev2 = focusonactivate on,class:^(jetbrains-.*)$
+# search dialog
+windowrulev2 = dimaround,class:^(jetbrains-.*)$,floating:1,title:^(?!win)
+windowrulev2 = center,class:^(jetbrains-.*)$,floating:1,title:^(?!win)
+# autocomplete & menus
+windowrulev2 = noanim,class:^(jetbrains-.*)$,title:^(win.*)$
+windowrulev2 = noinitialfocus,class:^(jetbrains-.*)$,title:^(win.*)$
+windowrulev2 = rounding 0,class:^(jetbrains-.*)$,title:^(win.*)$
