--- a/.config/hypr/conf/environments.conf
+++ b/.config/hypr/conf/environments.conf
@@ -14,6 +14,10 @@ env = QT_QPA_PLATFORMTHEME, qt5ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
+# Toolkit Backend
+env = GDK_BACKEND,wayland,x11,*
+env = CLUTTER_BACKEND,wayland
+
 # Mozilla
 env = MOZ_ENABLE_WAYLAND,1
 
@@ -29,6 +33,10 @@ env = __GL_VRR_ALLOWED,0
 
 # GTK
 env = GDK_SCALE,1
+
+# Ozone
+env = OZONE_PLATFORM,wayland
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
 # Theme https://wiki.hyprland.org/Configuring/Environment-variables/#theming-related-variables
 # Set the cursor size for xcursor
