--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -11,7 +11,7 @@
 # xdg-desktop-portal-hyprland - Setup XDG (for screen sharing)
 # setbg			  - set desktop wallpaper
 
-exec-once = cb
+# exec-once = cb
 exec-once = dunst
 exec-once = hypridle
 exec-once = batsignal
