--- a/.config/hypr/conf/monitors.conf
+++ b/.config/hypr/conf/monitors.conf
@@ -4,11 +4,11 @@
 # See https://wiki.hyprland.org/Configuring/Monitors
 #
 # monitor=,preferred,auto,1
-monitor=,1920x1080,auto,1
+# monitor=,1920x1080,auto,1
+# monitor = HDMI-A-2, 1920x1080@60, 0x0, 1
 
-# Dual monitor example on G15 Strix
-# eDP-1 is the built in monitor while DP-1 is external
-# Both monitors here are at 1440 and 165Hz
-# DP-1 is on the left and  eDP-1 is on the right
-# monitor=DP-1,1920x1080@60,0x0,1
-#monitor=eDP-1,2560x1440@165,2560x0,1
+# monitor = eDP-1, 1920x1080@60, 0x0, 1
+monitor = eDP-1, disable
+
+# monitor = HDMI-A-2, 1920x1080@120, 1920x0, 1
+monitor = HDMI-A-2, 2560x1440@60, 1920x0, 1
