--- a/.config/hypr/conf/variables.conf
+++ b/.config/hypr/conf/variables.conf
@@ -3,6 +3,8 @@
 # +----------------------------------------------------------+
 # See https://wiki.hyprland.org/Configuring/Variables
 
+gesture = 3, horizontal, workspace
+
 general {
     gaps_in = 5
     gaps_out = 10
@@ -42,10 +44,6 @@ input {
     }
 }
 
-gestures {
-    workspace_swipe = true
-}
-
 ecosystem {
     no_update_news = true
 }
@@ -56,9 +54,6 @@ misc {
     
     disable_hyprland_logo = true
     force_default_wallpaper = 1
-    allow_session_lock_restore = true
-
-    initial_workspace_tracking = false
 }
 
 binds {
