--- a/.config/hypr/conf/binds.conf
+++ b/.config/hypr/conf/binds.conf
@@ -1,61 +1,69 @@
-# +----------------------------------------------------------+
-# |                         Binds                            |
-# +----------------------------------------------------------+
+#  _     _           _
+# | |__ (_)_ __   __| |___
+# | '_ \| | '_ \ / _` / __|
+# | |_) | | | | | (_| \__ \
+# |_.__/|_|_| |_|\__,_|___/
+#
 # See https://wiki.hyprland.org/Configuring/Binds
 
 $mainMod = SUPER
 
-bind = $mainMod, RETURN, exec, $TERMINAL # Open Alactritty
-bind = $mainMod, q, killactive           # Close current window
-bind = $mainMod, M, exit          # Exit Hyprland
-
-# Toggle back and forth between two recent workspaces
-bind = $mainMod, TAB, workspace, previous
+# +-----------------------------------------------------------+
+# |                       Applications                        |
+# +-----------------------------------------------------------+
+# terminal
+bind = $mainMod, RETURN, exec, $TERMINAL
+# Rofi
+bind = $mainMod, p, exec, rofi -show drun
+bind = $mainMod SHIFT, p, exec, rofi -show run
+# waybar
 bind = $mainMod, b, exec, killall -SIGUSR1 waybar
 
-bind = $mainMod, o, togglefloating       # Allow a window to float
-bind = $mainMod, f, fullscreen           # Open the window in fullscreen
-# bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
+# +-----------------------------------------------------------+
+# |                          Display                          |
+# +-----------------------------------------------------------+
+bind = $mainMod SHIFT, mouse_down, exec, hyprctl keyword cursor:zoom_factor $(awk "BEGIN {print $(hyprctl getoption cursor:zoom_factor | grep 'float:' | awk '{print $2}') + 0.5}") # Increase display zoom
+bind = $mainMod SHIFT, mouse_up, exec, hyprctl keyword cursor:zoom_factor $(awk "BEGIN {print $(hyprctl getoption cursor:zoom_factor | grep 'float:' | awk '{print $2}') - 0.5}") # Decrease display zoom
+bind = $mainMod SHIFT, z, exec, hyprctl keyword cursor:zoom_factor 1 # Reset display zoom
 
- # Rofi
-bind = $mainMod, p, exec, rofi -show drun
-bind = $mainMod SHIFT, P, exec, rofi -show run
-# bind = $mainMod, Q, sysact
-
-# bind = ,HOME, dmenu-script-select
-# bind = ,NEXT, microphone toggle
-
-# Audio Control
-bind =  ,XF86AudioMute,        exec, audio volume-toggle
-binde = ,XF86AudioRaiseVolume, exec, audio volume-up
-binde = ,XF86AudioLowerVolume, exec, audio volume-down
-
-# Brightness Control
-binde = ,XF86MonBrightnessUp,   exec, brightness up
-binde = ,XF86MonBrightnessDown, exec, brightness down
-
-# Screen recording
-# bind = ,XF86Search, exec, screenshot-area
-
-# Move focus with mainMod + arrow keys
+# +-----------------------------------------------------------+
+# |                          Windows                          |
+# +-----------------------------------------------------------+
+bind = $mainMod, q, killactive            # Kill active window
+bind = $mainMod, M, exit                  # Exit Hyprland
+bind = $mainMod, f, fullscreen            # Toggle active windows into fullscreen
+bind = $mainMod, o, togglefloating        # Toggle active windows into floating mode
+bind = $mainMod, TAB, workspace, previous # Toggle back and forth between two recent workspaces
+# Move focus
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
-
-# Swaps the active window with another window
-bind = $mainMod SHIFT, H, movewindow, l
-bind = $mainMod SHIFT, L, movewindow, r
-bind = $mainMod SHIFT, K, movewindow, u
+# Swap the active window with another window
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, k, movewindow, u
 bind = $mainMod SHIFT, J, movewindow, d
-
 # Resizing the active window
 bind = $mainMod SHIFT, right, resizeactive, 100 0
 bind = $mainMod SHIFT, left, resizeactive, -100 0
 bind = $mainMod SHIFT, down, resizeactive, 0 100
 bind = $mainMod SHIFT, up, resizeactive, 0 -100
+# move / resize window with the mouse
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
 
+# +-----------------------------------------------------------+
+# |                          Actions                          |
+# +-----------------------------------------------------------+
+# custom scripts
+# bind = $mainMod, Q, sysact
+# bind = ,HOME, dmenu-script-select
+# bind = ,NEXT, microphone toggle
+
+# +-----------------------------------------------------------+
+# |                        Workspaces                         |
+# +-----------------------------------------------------------+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -67,7 +75,6 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
-
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
@@ -79,11 +86,19 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+# +-----------------------------------------------------------+
+# |                          Fn Keys                          |
+# +-----------------------------------------------------------+
+# Audio Control
+bind =  ,XF86AudioMute,        exec, audio volume-toggle
+binde = ,XF86AudioRaiseVolume, exec, audio volume-up
+binde = ,XF86AudioLowerVolume, exec, audio volume-down
+# Brightness Control
+binde = ,XF86MonBrightnessUp,   exec, brightness up
+binde = ,XF86MonBrightnessDown, exec, brightness down
+# Screen recording
+# bind = ,XF86Search, exec, screenshot-area
