--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -25,9 +25,6 @@ dpi-aware=no
 
 # Catppuccin mocha theme
 # https://github.com/catppuccin/foot/blob/main/themes/catppuccin-mocha.ini
-[cursor]
-color=11111b f5e0dc
-
 [colors]
 alpha=0.9
 foreground=cdd6f4
@@ -62,3 +59,5 @@ search-box-match=cdd6f4 313244
 
 jump-labels=11111b fab387
 urls=89b4fa
+
+cursor=11111b f5e0dc
