--- a/.config/hypr/conf/windowrules.conf
+++ b/.config/hypr/conf/windowrules.conf
@@ -3,37 +3,32 @@
 # +----------------------------------------------------------+
 # See https://wiki.hyprland.org/Configuring/Window-Rules
 
-windowrulev2 = workspace 1, class:^(firefox)$
-windowrulev2 = workspace 1, class:^(Chromium)$
-windowrulev2 = workspace 4, class:^(discord)$
-windowrulev2 = workspace 4, class:^(org.telegram.desktop)$
-windowrulev2 = workspace 5, class:^([Ss]team)$
-
-windowrulev2 = float, title:^(About Mozilla Firefox)$
-windowrulev2 = float, class:^(firefox)$,title:^(Picture-in-Picture)$
-windowrulev2 = float, class:^(firefox)$,title:^(Library)$
-windowrulev2 = float, class:^(nwg-look)$
-windowrulev2 = float, class:(.*org.pulseaudio.pavucontrol.*)
-windowrulev2 = float, class:^(nm-applet)$
-windowrulev2 = float, class:^(blueberry.py)$
-windowrulev2 = float, class:^(nm-connection-editor)$
-windowrulev2 = float, class:^(system-config-printer)$
-windowrulev2 = float, class:^(org.telegram.desktop)$
-windowrulev2 = float, class:^(org.gnome.SimpleScan)$
-windowrulev2 = float, class:^(qalculate-gtk)$
-windowrule   = float, class:.*.exe
-windowrule   = float, class:steam_app_.*
-windowrule   = float, class:steam_proton
+# Workspaces
+windowrule = match:class firefox, workspace 1
+windowrule = match:class ^(Chromium)$, workspace 1
+windowrule = match:class ^(discord)$, workspace 4
+windowrule = match:class ^(Slack)$, workspace 4
+windowrule = match:class org.telegram.desktop, workspace 4
+windowrule = match:class ^([Ss]team)$, workspace 5
 
 # Disable borders if only one window
-windowrulev2 = noborder, onworkspace:w[t1]
+windowrule = border_size 0, match:float 0, match:workspace w[tv1]
 
 # Jetbrains specific settings
-windowrulev2 = focusonactivate on,class:^(jetbrains-.*)$
-# search dialog
-windowrulev2 = dimaround,class:^(jetbrains-.*)$,floating:1,title:^(?!win)
-windowrulev2 = center,class:^(jetbrains-.*)$,floating:1,title:^(?!win)
-# autocomplete & menus
-windowrulev2 = noanim,class:^(jetbrains-.*)$,title:^(win.*)$
-windowrulev2 = noinitialfocus,class:^(jetbrains-.*)$,title:^(win.*)$
-windowrulev2 = rounding 0,class:^(jetbrains-.*)$,title:^(win.*)$
+windowrule = match:class ^jetbrains-.*$, match:float 1, match:title ^$|^\s$|^win\d+$, no_initial_focus on
+
+# Floating
+windowrule = match:title ^(About Mozilla Firefox)$, float on
+windowrule = match:class firefox, match:title ^(Picture-in-Picture)$, float on
+windowrule = match:class firefox, match:title ^(Library)$, float on
+windowrule = match:class ^(nwg-look)$, float on
+windowrule = match:class (.*org.pulseaudio.pavucontrol.*), float on, center on, size (monitor_w*.45) (monitor_h*.45)
+windowrule = match:class ^(nm-applet)$, float on
+windowrule = match:class ^(blueberry.py)$, float on
+windowrule = match:class ^(nm-connection-editor)$, float on
+windowrule = match:class ^(system-config-printer)$, float on
+windowrule = match:class ^(org.telegram.desktop)$, float on, center on
+windowrule = match:class ^(org.gnome.SimpleScan)$, float on
+windowrule = match:class ^(qalculate-gtk)$, float on
+windowrule = match:class .*.exe, float on
+windowrule = match:class ^([Ss]team)$, float on
