--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -1,4 +1,4 @@
 git:
-  paging:
-    colorArg: always
-    pager: delta --dark --paging=never --syntax-theme base16-256 --diff-so-fancy
+  pagers:
+    - colorArg: always
+      pager: delta --dark --paging=never --syntax-theme base16-256 --diff-so-fancy
