--- a/.config/pcmanfm/default/pcmanfm.conf
+++ b/.config/pcmanfm/default/pcmanfm.conf
@@ -11,6 +11,7 @@ always_show_tabs=0
 max_tab_chars=32
 win_width=1460
 win_height=985
+maximized=1
 splitter_pos=216
 media_in_new_tab=0
 desktop_folder_new_win=0
